--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,15 @@
 language: php
 
-notifications:
-  email:
-    recipients:
-        - rdebleu@eWallah.net
+os:
+  - linux
 
-sudo: required
+dist: bionic
+
+services:
+  - mysql
 
 addons:
-  firefox: "47.0.1"
   postgresql: "9.6"
-  apt:
-    packages:
-      - oracle-java8-installer
-      - oracle-java8-set-default
-      - chromium-chromedriver
 
 cache:
   directories:
@@ -22,38 +17,42 @@ cache:
     - $HOME/.npm
 
 php:
- - 7.1
- - 7.2
+ - 7.3
 
 env:
-  - DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=pgsql MOODLE_BRANCH=master
-  - DB=mysqli MOODLE_BRANCH=MOODLE_35_STABLE
   - DB=mysqli MOODLE_BRANCH=master
-  - DB=mariadb MOODLE_BRANCH=MOODLE_35_STABLE
-  - DB=mariadb MOODLE_BRANCH=master
-  
+
+jobs:
+  include:
+    - php: 7.1
+      env: DB=pgsql MOODLE_BRANCH=MOODLE_35_STABLE
+    - env: DB=pgsql MOODLE_BRANCH=MOODLE_37_STABLE
+    - env: DB=pgsql MOODLE_BRANCH=MOODLE_38_STABLE
+    - php: 7.4
+      env: DB=pgsql MOODLE_BRANCH=master
+
 before_install:
   - phpenv config-rm xdebug.ini
-  - nvm install 8.9
-  - nvm use 8.9
+  - nvm install 14.2.0
   - cd ../..
-  - composer create-project -n --no-dev --prefer-dist moodlerooms/moodle-plugin-ci ci ^2
+  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
   - moodle-plugin-ci install
 
 script:
+  - moodle-plugin-ci phpunit --coverage-text
   - moodle-plugin-ci phplint
   - moodle-plugin-ci phpcpd
   - moodle-plugin-ci phpmd
+  - moodle-plugin-ci phpdoc
   - moodle-plugin-ci codechecker
   - moodle-plugin-ci validate
   - moodle-plugin-ci savepoints
   - moodle-plugin-ci mustache
   - moodle-plugin-ci grunt
-  - moodle-plugin-ci phpunit --coverage-text
-  - moodle-plugin-ci behat
-  - moodle-plugin-ci behat --profile chrome
 
+after_success:
+  - moodle-plugin-ci coveralls-upload
