--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,8 +59,10 @@ jobs:
            sudo locale-gen en_AU.UTF-8
 
       - name: Install Moodle
-        run: moodle-plugin-ci install --branch ${{ matrix.moodle-branch }} --db-user moodleuser --db-pass moodle --plugin this-plugin
-      
+        run: moodle-plugin-ci install --db-user moodleuser --db-pass moodle --plugin this-plugin
+        env:
+          MOODLE_BRANCH: ${{ matrix.moodle-branch }}
+
       - name: phplint
         run: moodle-plugin-ci phplint
 
