--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-          - moodle-branch: ['master', 'MOODLE_311_STABLE', 'MOODLE_310_STABLE', 'MOODLE_39_STABLE']
+        moodle-branch: ['master', 'MOODLE_311_STABLE', 'MOODLE_310_STABLE', 'MOODLE_39_STABLE']
 
     steps:
       - name: Setup PHP
