--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,43 +13,57 @@ jobs:
     name: ci
     runs-on: ubuntu-latest
 
-    env:
-      DB: pgsql
-
     services:
       postgres:
         image: postgres
         env:
-          POSTGRES_USER: moodleuser
-          POSTGRES_PASSWORD: moodle
+          POSTGRES_USER: 'postgres'
+          POSTGRES_HOST_AUTH_METHOD: 'trust'
         options: --health-cmd="pg_isready" --health-interval 10s --health-timeout 5s --health-retries 5
         ports:
           - 5432:5432
+      mariadb:
+        image: mariadb
+        env:
+          MYSQL_USER: 'root'
+          MYSQL_ALLOW_EMPTY_PASSWORD: "true"
+        options: --health-cmd="mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 3
+        ports:
+          - 3306:3306
 
     strategy:
       fail-fast: false
       matrix:
-        moodle-branch: ['master', 'MOODLE_311_STABLE', 'MOODLE_310_STABLE', 'MOODLE_39_STABLE']
+        moodle-branch: ['master', 'MOODLE_310_STABLE', 'MOODLE_39_STABLE', 'MOODLE_38_STABLE']
+        php: ['7.4', '7.3']
+        database: ['mariadb', 'pgsql']
 
     steps:
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '7.4'
-          extensions: mbstring, pgsql, mysqli
-
-      - name: Checkout plugin
+      - name: checkout plugin
         uses: actions/checkout@v2
         with:
           path: this-plugin
 
-      - name: Checkout moodle-plugin-ci
+      - name: Install node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14.15.0'
+
+      - name: setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          extensions: mbstring, pgsql, mysqli
+          tools: composer, behat, phpunit, phpmd, phpcbf, phpcpd, psalm, phpcs
+          coverage: xdebug
+
+      - name: checkout moodle-plugin-ci
         uses: actions/checkout@v2
         with:
           repository: moodlehq/moodle-plugin-ci
           path: ci
 
-      - name: Composer install
+      - name: other
         run: |
            cd ci
            composer install
@@ -57,9 +71,10 @@ jobs:
            echo "$(cd vendor/bin; pwd)" >> $GITHUB_PATH
            sudo locale-gen en_AU.UTF-8
 
-      - name: Install Moodle
-        run: moodle-plugin-ci install --db-user moodleuser --db-pass moodle --plugin this-plugin
+      - name: install Moodle
+        run: moodle-plugin-ci install --db-host=127.0.0.1 --plugin this-plugin
         env:
+          DB: ${{ matrix.database }}
           MOODLE_BRANCH: ${{ matrix.moodle-branch }}
 
       - name: phplint
@@ -94,6 +109,15 @@ jobs:
       
       - name: chrome
         run: moodle-plugin-ci behat --profile chrome
+
+      - name: init classic
+        run: php moodle/admin/tool/behat/cli/init.php -a="classic"
+
+      - name: firefox classic
+        run: moodle-plugin-ci behat --suite="classic"
+      
+      - name: chrome classic
+        run: moodle-plugin-ci behat  --suite="classic" --profile chrome
 
       - name: coveralls
         env:
