--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php }}
-          extensions: mbstring, pgsql, mysqli, gd, xmlrpc,zip
+          extensions: mbstring, pgsql, mysqli, gd, xmlrpc, zip
           ini-values: max_input_vars=5000
-          coverage: none
+          coverage: xdebug
 
       - name: composer
         run: |
@@ -40,6 +40,7 @@ jobs:
            echo $(cd ci/vendor/bin; pwd) >> $GITHUB_PATH
            sudo locale-gen en_AU.UTF-8
            sudo systemctl start mysql.service
+           sed -i 's/phpdbg -d memory_limit=-1 -qrr//g' ci/src/Command/PHPUnitCommand.php
 
       - name: install Moodle
         run: moodle-plugin-ci install -v  --db-user=root --db-pass=root --db-host=127.0.0.1 --plugin this-plugin
@@ -84,12 +85,8 @@ jobs:
         run: moodle-plugin-ci --ansi mustache
 
       - name: phpunit
-        if: ${{ matrix.php == '7.4' }}
+        if: ${{ always() }}
         run: moodle-plugin-ci --ansi phpunit --coverage-text
-
-      - name: phpunit
-        if: ${{ matrix.php == '8.0' }}
-        run: moodle-plugin-ci --ansi phpunit
 
       - name: behat
         if: ${{ always() }}
